--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, I know how you feel but life is unfair. <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">Where are you love?</h1>
+  <p class="lead">I am always with you! You just have to search for me. Let us begin our journey <a href="{{ site.baseurl }}">here</a>.</p>
 </div>
