--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">Where are you love?</h1>
-  <p class="lead">I am always with you! You just have to search for me. Let us begin our journey <a href="{{ site.baseurl }}">here</a>.</p>
+  <p class="lead">I am always with you! You just have to search for me. Begin your journey <a href="{{ site.baseurl }}">here</a>.</p>
 </div>
